--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -17,6 +17,7 @@
         <tr>
           <th scope="col">Short URL</th>
           <th scope="col">Long URL</th>
+          <th scope="col">Edit</th>
           <th scope="col">Delete</th>
         </tr>
       </thead>
@@ -25,6 +26,9 @@
           <tr>
             <td><%= url %></td>
             <td><%= urls[url] %></td>
+            <td><form method ="get" action="urls/<%= url %>/edit"> 
+            <button type="submit">Edit</button>
+            </form></td>
             <td><form method="post" action="/urls/<%= url %>/delete">
               <button type="submit">Delete</button>
             </form></td>
