--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -9,6 +9,25 @@
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
+      <% if (username !== undefined) { %>
+        <form class="form-inline" action="/logout" method="POST">
+          <div class="inline">
+          <h1> <%= username %> Logged in! </h1>
+          <button type="submit" class="btn btn-primary">Logout</button>
+        </div>
+        </form>
+          <% } %>
+
+          <% if (username === undefined) { %>
+
+      <div class="topnav-right">
+            <form class="form-inline" action="/login" method="POST">
+              <div class="form-group mb-2">
+                <input class="form-control" type="text" name="username" placeholder="username" style="width: 300px; margin: 1em">
+                <button type="submit" class="btn btn-primary">Login</button>
+              </div>
+            </form>
     </div>
+    <% } %>
   </nav>
 </header>
