--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -6,9 +6,9 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-item nav-link" href="/urls">My URLs</a>
-        <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
         <% if (userID === undefined) { %>
+        <a class="nav-item nav-link" href="/login">My URLs</a>
+        <a class="nav-item nav-link" href="/login">Create New URL</a>
         <form class="form-inline" action="login" method="get">
           <div class="form-group mb-2">
             <button type="submit" class="btn btn-primary">Login</button>
@@ -20,6 +20,8 @@
       </div>
         </form>
       <% } else { %>
+        <a class="nav-item nav-link" href="/urls">My URLs</a>
+        <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
         <form class="form-inline" action="logout" method="POST">
           <div class="form-group mb-2">
               <div class="inline">
