--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -28,7 +28,7 @@
       </div>
         </form>
       <% } else { %>
-        <a class="nav-item nav-link" href="/urls">My URLs</a>
+        <a class="nav-item nav-link" href="/url">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
         <form class="form-inline" action="logout" method="POST">
           <div class="form-group mb-2">
